--- a/.cproject
+++ b/.cproject
@@ -47,7 +47,8 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.C5500_4.4.compilerID.INCLUDE_PATH.1752985422" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.C5500_4.4.compilerID.INCLUDE_PATH" valueType="includePath">
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}"/>
 									<listOptionValue builtIn="false" value="${CG_TOOL_ROOT}/include"/>
-									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/Drivers/include"/>
+									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/BSP/inc"/>
+									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/Core/Drivers/inc"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.C5500_4.4.compilerID.OTHER_FLAGS.1246050077" name="Other flags" superClass="com.ti.ccstudio.buildDefinitions.C5500_4.4.compilerID.OTHER_FLAGS" valueType="stringList">
 									<listOptionValue builtIn="false" value=""/>
