--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,10 @@
 eclipse.preferences.version=1
+encoding//Debug/App/subdir_rules.mk=UTF-8
+encoding//Debug/App/subdir_vars.mk=UTF-8
+encoding//Debug/BSP/src/subdir_rules.mk=UTF-8
+encoding//Debug/BSP/src/subdir_vars.mk=UTF-8
+encoding//Debug/Core/Drivers/src/subdir_rules.mk=UTF-8
+encoding//Debug/Core/Drivers/src/subdir_vars.mk=UTF-8
 encoding//Debug/Drivers/lib/subdir_rules.mk=UTF-8
 encoding//Debug/Drivers/lib/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
