【备份】添加了汇编文件

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,8 @@ encoding//Debug/App/subdir_rules.mk=UTF-8
 encoding//Debug/App/subdir_vars.mk=UTF-8
 encoding//Debug/BSP/src/subdir_rules.mk=UTF-8
 encoding//Debug/BSP/src/subdir_vars.mk=UTF-8
+encoding//Debug/Core/C55xxCSL/asm/subdir_rules.mk=UTF-8
+encoding//Debug/Core/C55xxCSL/asm/subdir_vars.mk=UTF-8
 encoding//Debug/Core/C55xxCSL/src/subdir_rules.mk=UTF-8
 encoding//Debug/Core/C55xxCSL/src/subdir_vars.mk=UTF-8
 encoding//Debug/Core/Drivers/src/subdir_rules.mk=UTF-8
