【体验提升】优化了链接脚本，修复了cmake测试编译器失败问题

--- a/.cproject
+++ b/.cproject
@@ -85,6 +85,9 @@
 							<tool id="com.ti.ccstudio.buildDefinitions.C5500_4.4.hex.1068997787" name="C5500 Hex Utility" superClass="com.ti.ccstudio.buildDefinitions.C5500_4.4.hex"/>
 						</toolChain>
 					</folderInfo>
+					<sourceEntries>
+						<entry excluding="Tools" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+					</sourceEntries>
 				</configuration>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
