【优化】修复了CMakeLists中的一些问题，并把实验1成功添加置工程里

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//Debug/App/1_debug/subdir_rules.mk=UTF-8
+encoding//Debug/App/1_debug/subdir_vars.mk=UTF-8
 encoding//Debug/App/demo/subdir_rules.mk=UTF-8
 encoding//Debug/App/demo/subdir_vars.mk=UTF-8
 encoding//Debug/App/subdir_rules.mk=UTF-8
