【开发】添加了初始化文件、定时器文件（未开发），并修改了链接脚本

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,8 @@ encoding//Debug/App/2_map/subdir_rules.mk=UTF-8
 encoding//Debug/App/2_map/subdir_vars.mk=UTF-8
 encoding//Debug/App/3_memory/subdir_rules.mk=UTF-8
 encoding//Debug/App/3_memory/subdir_vars.mk=UTF-8
+encoding//Debug/App/4_sdram/subdir_rules.mk=UTF-8
+encoding//Debug/App/4_sdram/subdir_vars.mk=UTF-8
 encoding//Debug/App/demo/subdir_rules.mk=UTF-8
 encoding//Debug/App/demo/subdir_vars.mk=UTF-8
 encoding//Debug/App/subdir_rules.mk=UTF-8
