【开发】基础LCD已经搭建好了

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -7,6 +7,10 @@ encoding//Debug/App/3_memory/subdir_rules.mk=UTF-8
 encoding//Debug/App/3_memory/subdir_vars.mk=UTF-8
 encoding//Debug/App/4_sdram/subdir_rules.mk=UTF-8
 encoding//Debug/App/4_sdram/subdir_vars.mk=UTF-8
+encoding//Debug/App/5_TIM_INT/subdir_rules.mk=UTF-8
+encoding//Debug/App/5_TIM_INT/subdir_vars.mk=UTF-8
+encoding//Debug/App/9_LCD/subdir_rules.mk=UTF-8
+encoding//Debug/App/9_LCD/subdir_vars.mk=UTF-8
 encoding//Debug/App/demo/subdir_rules.mk=UTF-8
 encoding//Debug/App/demo/subdir_vars.mk=UTF-8
 encoding//Debug/App/subdir_rules.mk=UTF-8
