【模拟器开发】可以设计一个初始的正弦波形界面，接下来准备优化性能并调整封装

--- a/Adapter/GUI/lvgl-simulator/CMakeLists.txt
+++ b/Adapter/GUI/lvgl-simulator/CMakeLists.txt
@@ -72,6 +72,7 @@ include_directories(
         ${GUI_INC_DIRS}
         ${SDL2_ROOT}/include
         ${UI_INC_DIRS}
+        ../../../Core/Drivers/inc
 )
 target_link_libraries(${PROJECT_NAME} PRIVATE ${SDL2_LIB})
 
