--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,28 @@
 eclipse.preferences.version=1
+encoding//Debug/Adapter/GUI/gui-simulator/Drivers/subdir_rules.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/Drivers/subdir_vars.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/SDL2/i686-w64-mingw32/lib/subdir_rules.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/SDL2/i686-w64-mingw32/lib/subdir_vars.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/SDL2/x86_64-w64-mingw32/lib/subdir_rules.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/SDL2/x86_64-w64-mingw32/lib/subdir_vars.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/3.30.5/CompilerIdC/subdir_rules.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/3.30.5/CompilerIdC/subdir_vars.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/3.30.5/CompilerIdCXX/subdir_rules.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/3.30.5/CompilerIdCXX/subdir_vars.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/Drivers/subdir_rules.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/Drivers/subdir_vars.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/Adapter/GUI/subdir_rules.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/Adapter/GUI/subdir_vars.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/App/demo/ui/subdir_rules.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/App/demo/ui/subdir_vars.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/Middleware/Library/gui/subdir_rules.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/Middleware/Library/gui/subdir_vars.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/subdir_rules.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/subdir_vars.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/bin/subdir_rules.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/bin/subdir_vars.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/subdir_rules.mk=UTF-8
+encoding//Debug/Adapter/GUI/gui-simulator/subdir_vars.mk=UTF-8
 encoding//Debug/Adapter/GUI/subdir_rules.mk=UTF-8
 encoding//Debug/Adapter/GUI/subdir_vars.mk=UTF-8
 encoding//Debug/Adapter/GUI/u8g2-simulator/Drivers/subdir_rules.mk=UTF-8
@@ -53,6 +77,8 @@ encoding//Debug/Drivers/lib/subdir_rules.mk=UTF-8
 encoding//Debug/Drivers/lib/subdir_vars.mk=UTF-8
 encoding//Debug/Middleware/DSP/lib/subdir_rules.mk=UTF-8
 encoding//Debug/Middleware/DSP/lib/subdir_vars.mk=UTF-8
+encoding//Debug/Middleware/Library/gui/subdir_rules.mk=UTF-8
+encoding//Debug/Middleware/Library/gui/subdir_vars.mk=UTF-8
 encoding//Debug/Middleware/Third_Party/u8g2/subdir_rules.mk=UTF-8
 encoding//Debug/Middleware/Third_Party/u8g2/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
