【模拟器开发】与TI编译器保持兼容

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,13 +29,13 @@ configure_file(${CMAKE_SOURCE_DIR}/App/conf/app_conf.h.in ${CMAKE_SOURCE_DIR}/Ap
 
 #-------------------------------------------库-------------------------------------------
 file(GLOB_RECURSE SOURCES
-        "Adapter/GUI/gui.c"
+        "Adapter/GUI/gui.cpp"
         "${APP_DIR}/*.c"
         "${APP_DIR}/*.cpp"
         "BSP/src/*.c"
         "Core/Drivers/src/*.c"
-        "Middleware/Third_Party/u8g2/*.c"
         "Middleware/Library/gui/*.c"
+        "Middleware/Library/gui/*.cpp"
 )
 include_directories(
         "Adapter/GUI"
