【开发】已经与CCS进行了同步

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -81,6 +81,24 @@ encoding//Debug/Middleware/Library/gui/subdir_rules.mk=UTF-8
 encoding//Debug/Middleware/Library/gui/subdir_vars.mk=UTF-8
 encoding//Debug/Middleware/Third_Party/u8g2/subdir_rules.mk=UTF-8
 encoding//Debug/Middleware/Third_Party/u8g2/subdir_vars.mk=UTF-8
+encoding//Debug/Projects/1_debug/subdir_rules.mk=UTF-8
+encoding//Debug/Projects/1_debug/subdir_vars.mk=UTF-8
+encoding//Debug/Projects/2_map/subdir_rules.mk=UTF-8
+encoding//Debug/Projects/2_map/subdir_vars.mk=UTF-8
+encoding//Debug/Projects/3_memory/subdir_rules.mk=UTF-8
+encoding//Debug/Projects/3_memory/subdir_vars.mk=UTF-8
+encoding//Debug/Projects/4_sdram/subdir_rules.mk=UTF-8
+encoding//Debug/Projects/4_sdram/subdir_vars.mk=UTF-8
+encoding//Debug/Projects/5_TIM_INT/subdir_rules.mk=UTF-8
+encoding//Debug/Projects/5_TIM_INT/subdir_vars.mk=UTF-8
+encoding//Debug/Projects/9_LCD/subdir_rules.mk=UTF-8
+encoding//Debug/Projects/9_LCD/subdir_vars.mk=UTF-8
+encoding//Debug/Projects/9_LCD/ui/subdir_rules.mk=UTF-8
+encoding//Debug/Projects/9_LCD/ui/subdir_vars.mk=UTF-8
+encoding//Debug/Projects/demo/subdir_rules.mk=UTF-8
+encoding//Debug/Projects/demo/subdir_vars.mk=UTF-8
+encoding//Debug/Projects/demo/ui/subdir_rules.mk=UTF-8
+encoding//Debug/Projects/demo/ui/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
 encoding//Debug/objects.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
