--- a/.cproject
+++ b/.cproject
@@ -44,9 +44,9 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.C5500_4.4.compilerID.INCLUDE_PATH.1216943031" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.C5500_4.4.compilerID.INCLUDE_PATH" valueType="includePath">
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}"/>
 									<listOptionValue builtIn="false" value="${CG_TOOL_ROOT}/include"/>
-									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/App"/>
+									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/Projects"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/Adapter/GUI"/>
-									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/App/conf"/>
+									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/Projects/conf"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/BSP/inc"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/Core/Drivers/inc"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/Middleware/DSP/include"/>
@@ -95,7 +95,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="Adapter/GUI/gui-simulator|App/9_LCD/ui|Tools" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="Adapter/GUI/gui-simulator|Tools" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
