--- a/.cproject
+++ b/.cproject
@@ -97,6 +97,8 @@
 					</folderInfo>
 					<sourceEntries>
 						<entry excluding="Adapter/GUI/gui-simulator|Tools" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/App"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Adapter/GUI/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/Adapter"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
