--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -97,6 +97,10 @@ encoding//Debug/GUI_Simulator/gui-simulator/cmake-build-debug-mingw32/CMakeFiles
 encoding//Debug/GUI_Simulator/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/3.31.6/CompilerIdCXX/subdir_vars.mk=UTF-8
 encoding//Debug/GUI_Simulator/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/Drivers/subdir_rules.mk=UTF-8
 encoding//Debug/GUI_Simulator/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/Drivers/subdir_vars.mk=UTF-8
+encoding//Debug/GUI_Simulator/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/Core/ui/subdir_rules.mk=UTF-8
+encoding//Debug/GUI_Simulator/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/Core/ui/subdir_vars.mk=UTF-8
+encoding//Debug/GUI_Simulator/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/Middleware/GUI/subdir_rules.mk=UTF-8
+encoding//Debug/GUI_Simulator/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/Middleware/GUI/subdir_vars.mk=UTF-8
 encoding//Debug/GUI_Simulator/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/Middleware/Library/gui/subdir_rules.mk=UTF-8
 encoding//Debug/GUI_Simulator/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/Middleware/Library/gui/subdir_vars.mk=UTF-8
 encoding//Debug/GUI_Simulator/gui-simulator/cmake-build-debug-mingw32/CMakeFiles/Simulator.dir/E_/Program/Embedded/MCU/TI/Program/new_demo/demo/Projects/demo/ui/subdir_rules.mk=UTF-8
